# gadflai

./: README.md  pyproject.toml
.gadflai/: 2023-09-05-00.milestone.md
