[tool.poetry]
name = "gadflai"
version = "0.1.0"
description = ""
authors = ["achilles schmelzer <achilles@daopanel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
llama-index = "^0.8.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
